    - These parameters had already been reversed elsewhere in v0.13.2.AG (Commit 2d8ab59)
      * Ported from downstream: https://github.com/joevt/RefindPlus/commit/266fd8f
    - The changes invalidated each other
- Fixes `UGA Graphics` Handling
  * RefindPlus Crashed when run with UGA-based GPUs
- Improves `Misc` Handling
  * Some entry types were mislabelled as `Linux`
  * Now recognises `Linux Unified Key Setup (LUKS)` encrypted volumes
  * Now limits `spoof_osx_version` to Apple firmware to match documentation
  * No longer attempts to clear the `opencore-version` variable when booting into macOS
    - This variable is actually only stored in a volatile state
  * Addressed misc static analysis flags
    - These apply to some filesystem drivers; which are updated accordingly
- Amends `Ventoy` Handling
  * Instances are now automatically detected and processed
    - Hence, specific handling is no longer user configurable
    - The associated `handle_ventoy` configuration token is now removed and ignored if set


0.14.1.AA (04 Jun 2024):
-----------------------
- Synced with Upstream v0.14.1
- Adds `SyncTrust` Feature
  * The boot `Chain of Trust` may be broken on booting with 3rd-party tools on T2/TPM chipped units
  * When this happens, the unit refuses to boot the selected item and may even become unresponsive
  * This feature provides a workaround by allowing a native trusted reboot to the selected item
  * This feature can be enabled by activating a new `sync_trust` configuration token
- Adds `LegacySync` Feature
  * RefindPlus previously assumed all Macs were capable of legacy BIOS boot
    - This was from code that went in upstream in 2012 when this was a reasonable working assumption
      * However, Macs later became UEFI certified and the last Intel Macs appear to be UEFI Class 3+
      * UEFI Class 3/3+ devices do not support legacy BIOS boot
    - This feature attempts to categorise Macs and allow/disallow legacy BIOS boot accordingly